ChatUI Phase 1 complete - Production ready
- Added AI-powered ChatUI component
- Gemini AI integration for conversation
- JWT token generation and email system
- Complete documentation suite
- Production deployment guides
- Ready for Vercel deployment

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,17 @@ NEXT_PUBLIC_ANALYTICS_ID=
 # Newsletter API
 NEWSLETTER_API_KEY=
 
-# Quiz Webhook
-QUIZ_WEBHOOK_URL=
+# Quiz Webhook (Google Apps Script)
+NEXT_PUBLIC_QUIZ_WEBHOOK_URL=
+
+# ChatUI & JWT Configuration - REQUIRED
+JWT_SECRET=change-this-to-a-secure-random-string-min-32-characters
+# Application URLs
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_INTAKE_APP_URL=http://localhost:3001
+
+# Note: Copy to .env.local and fill in actual values
+# For production, change URLs to your deployed domains
+GEMINI_API_KEY=
+
+# Note: Copy to .env.local and fill in actual values
