security: Remove exposed credentials and add security documentation

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,38 @@
-# Analytics
-NEXT_PUBLIC_ANALYTICS_ID=
+# Home Site Environment Variables Example
+# Copy this file to .env.local and fill in your actual values
 
-# Newsletter API
-NEWSLETTER_API_KEY=
+# ====================
+# REQUIRED VARIABLES
+# ====================
 
-# Quiz Webhook (Google Apps Script)
-NEXT_PUBLIC_QUIZ_WEBHOOK_URL=
+# Google Gemini AI API Key
+# Get yours at: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# ChatUI & JWT Configuration - REQUIRED
-JWT_SECRET=change-this-to-a-secure-random-string-min-32-characters
-# Application URLs
+# JWT Secret for token signing/verification
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# IMPORTANT: This MUST match the value in teachmeai-intake-app/.env.local
+JWT_SECRET=your_generated_secret_here
+
+# Resend API Key for sending emails
+# Get yours at: https://resend.com
+# Optional for local testing - you can skip this initially
+RESEND_API_KEY=re_your_resend_key_here
+
+# ====================
+# LOCAL DEVELOPMENT
+# ====================
+
+# Base URL for the home site
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# URL for the intake app
 NEXT_PUBLIC_INTAKE_APP_URL=http://localhost:3001
 
-# Note: Copy to .env.local and fill in actual values
-# For production, change URLs to your deployed domains
-GEMINI_API_KEY=
+# ====================
+# PRODUCTION (Vercel)
+# ====================
 
-# Note: Copy to .env.local and fill in actual values
+# When deploying to production, update these in Vercel environment variables:
+# NEXT_PUBLIC_BASE_URL=https://your-home-site.vercel.app
+# NEXT_PUBLIC_INTAKE_APP_URL=https://your-intake-app.vercel.app
