--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.3.1",
     "baseline-browser-mapping": "^2.9.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
