--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "teachmeai-home-site",
-  "version": "2.8.0",
+  "version": "2.9.0",
   "private": true,
+  "browserslist": [
+    "defaults",
+    "last 2 versions",
+    "not dead",
+    "> 0.5%",
+    "last 3 years"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
