--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teachmeai-home-site",
-  "version": "2.10.0",
+  "version": "2.11.0",
   "private": true,
   "browserslist": [
     "defaults",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@next/third-parties": "^16.1.6",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.5.0",
